Change buffer parameters

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -59,7 +59,7 @@
    s3_object_key_format %{path}/fluentd-%{index}
    path "#{ENV['ENVIRONMENT_NAME']}"
    store_as text
-  
+
    <buffer>
      @type file_single
      path /var/log/fluentd-buffers/s3-annotations.buffer
@@ -68,7 +68,7 @@
      timekey_use_utc true # use utc
      flush_mode interval
      flush_interval 10s
-     chunk_limit_size 32m  
+     chunk_limit_size 32m
      flush_thread_count 16
    </buffer>
 
@@ -80,7 +80,7 @@
     ip_address 169.254.169.254
     port       80b
    </instance_profile_credentials>
-  
+
   </match>
 </label>
 
@@ -103,9 +103,11 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 10s
-     chunk_limit_size 32m 
+     flush_interval 5s
+     chunk_limit_size 15m
      flush_thread_count 16
+     retry_type exponential_backoff
+     retry_max_interval 30
   </buffer>
 
   <format>
