Change buffer parameters

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -92,7 +92,7 @@
   aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
   s3_bucket "#{ENV['BUCKET_NAME']}"
   s3_region "#{ENV['AWS_REGION']}"
-  s3_object_key_format %{path}/fluentd-_%{time_slice}%{hex_random}_%{hostname}
+  s3_object_key_format %{path}/fluentd-_%{time_slice}%{hex_random}_%{hostname}-%{index}
   path "#{ENV['ENVIRONMENT_NAME']}"
   store_as text
 
@@ -105,7 +105,7 @@
      flush_mode interval
      flush_interval 30s
      chunk_limit_size 32m
-     flush_thread_count 1
+     flush_thread_count 16
      retry_type exponential_backoff
      retry_max_interval 30
   </buffer>
